chore(fix): applying danneh's feedback

--- a/src/app.css
+++ b/src/app.css
@@ -21,11 +21,6 @@
 		url('/fonts/Soehne-Breit-Kraftig.woff2') format('woff2');
 }
 
-body {
-	/* @apply bg-background text-foreground; */
-	font-family: 'Inter Variable', sans-serif;
-}
-
 @layer base {
 	:root {
 		--background: 0 0% 100%;
@@ -94,13 +89,27 @@ body {
 
 		--subtle: 210 3% 31%;
 	}
-}
 
-@layer base {
 	* {
-		@apply border-border;
+		border-color: hsl(var(--border));
 	}
+
 	body {
-		@apply bg-background text-foreground;
+		@apply tracking-normal;
+		background-color: hsl(var(--background));
+		color: hsl(var(--foreground));
+		font-family: 'Inter Variable', sans-serif;
+	}
+
+	h1, h2, h3, h4, h5, h6 {
+		@apply tracking-tight;
+	}
+
+	p {
+		@apply tracking-normal;
+	}
+
+	button, a {
+		@apply tracking-wide;
 	}
 }
