--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,7 @@
 }
 
 @layer base {
+	/* Define dark mode variables in :root */
 	:root {
 		--background: 240 4% 5%;
 		--background-lighter: 240 4% 10%;
@@ -51,6 +52,8 @@
 		--border: 212 9% 73%;
 		--input: 217.2 32.6% 17.5%;
 		--ring: 212.7 26.8% 83.9%;
+
+		--radius: 0.5rem;
 
 		--subtle: 210 3% 31%;
 	}
