--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,6 @@
 @import '@fontsource-variable/inter';
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
