--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 @import '@fontsource-variable/inter';
 @import '@fontsource-variable/space-grotesk';
+@import '@fontsource-variable/kode-mono';
 
 @tailwind base;
 @tailwind components;
@@ -68,7 +69,7 @@
 		@apply tracking-normal;
 		background-color: hsl(var(--background));
 		color: hsl(var(--foreground));
-		font-family: 'Space Grotesk Variable', monospace;
+		font-family: 'Space Grotesk Variable', sans-serif;
 		font-weight: 300;
 	}
 
