--- a/src/app.css
+++ b/src/app.css
@@ -24,6 +24,15 @@
 		url('/fonts/Soehne-Breit-Kraftig.woff2') format('woff2');
 }
 
+@font-face {
+	font-family: 'ABC Favorit Variable';
+	font-style: normal;
+	font-weight: normal;
+	src:
+		local('ABC Favorit Variable'),
+		url('/fonts/ABCFavoritVariable-Trial.woff2') format('woff2');
+}
+
 @layer base {
 	/* Define dark mode variables in :root */
 	:root {
@@ -69,7 +78,7 @@
 		@apply tracking-normal;
 		background-color: hsl(var(--background));
 		color: hsl(var(--foreground));
-		font-family: 'Space Grotesk Variable', sans-serif;
+		font-family: 'ABC Favorit Variable', serif;
 		font-weight: 300;
 	}
 
