--- a/src/app.css
+++ b/src/app.css
@@ -46,7 +46,7 @@
 	/* Define dark mode variables in :root */
 	:root {
 		--font-primary: 'HubotSans', sans-serif;
-		--font-mono: 'Kode-Mono', sans-serif;
+		--font-mono: 'Kode Mono Variable', sans-serif;
 
 		--background: 240 4% 5%;
 		--background-lighter: 240 4% 10%;
