--- a/src/app.css
+++ b/src/app.css
@@ -42,11 +42,21 @@
 		url('/fonts/HubotSans.woff2') format('woff2');
 }
 
+@font-face {
+	font-family: 'PowerGrotesk';
+	font-style: normal;
+	font-weight: normal;
+	src:
+		local('PowerGrotesk'),
+		url('/fonts/PowerGrotesk-Variable.woff2') format('woff');
+}
+
 @layer base {
 	/* Define dark mode variables in :root */
 	:root {
 		--font-primary: 'HubotSans', sans-serif;
-		--font-mono: 'Kode Mono Variable', sans-serif;
+		--font-mono: 'Kode Mono Variable', monospace;
+		--font-power: 'PowerGrotesk', sans-serif;
 
 		--background: 240 4% 5%;
 		--background-lighter: 240 4% 10%;
@@ -80,6 +90,9 @@
 		--radius: 0.5rem;
 
 		--subtle: 210 3% 31%;
+
+		--Neutral-20: #ccc;
+		--Neutral-40: #999;
 	}
 
 	* {
@@ -94,7 +107,12 @@
 		font-weight: 300;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
 		@apply tracking-tight;
 	}
 
@@ -103,7 +121,19 @@
 		font-family: var(--font-primary);
 	}
 
-	button, a {
+	button,
+	a {
 		@apply tracking-wide;
+	}
+
+	.hero {
+		background-image: url('/hero-img.png');
+
+		.hero-content {
+			background-image: linear-gradient(180deg, rgba(1, 1, 2, 0) 0%, #010102 100%);
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: center;
+		}
 	}
 }
