--- a/src/app.css
+++ b/src/app.css
@@ -128,7 +128,7 @@
 		background-repeat: no-repeat;
 		background-position: center;
 		/* background-size: cover; */
-		@apply pt-20 pb-20 md:pb-40;
+		@apply pt-16 md:pt-28 pb-20 md:pb-40;
 
 		.hero-mask {
 			background: linear-gradient(180deg, rgba(1, 1, 2, 0) 0%, #010102 100%);
