updated featured articles section

--- a/src/app.css
+++ b/src/app.css
@@ -90,6 +90,12 @@
 		--radius: 0.5rem;
 
 		--subtle: 210 3% 31%;
+
+		--neutral-05: #f2f2f2;
+		--neutral-20: #ccc;
+		--neutral-40: #999;
+		--neutral-60: #666666;
+		--neutral-80: #333333;
 	}
 
 	* {
