updated about page

--- a/src/app.css
+++ b/src/app.css
@@ -92,6 +92,7 @@
 		--subtle: 210 3% 31%;
 
 		--neutral-05: #f2f2f2;
+		--neutral-10: #e6e6e6;
 		--neutral-20: #ccc;
 		--neutral-40: #999;
 		--neutral-60: #666666;
