--- a/src/app.css
+++ b/src/app.css
@@ -47,7 +47,7 @@
 @layer base {
 	/* Define dark mode variables in :root */
 	:root {
-		--font-primary: 'Hubot Sans Variable', sans-serif;
+		/* --font-primary: 'Hubot Sans Variable', sans-serif; */
 		--font-mono: 'Kode Mono Variable', monospace;
 		--font-power: 'PowerGrotesk';
 		--font-hubot: 'Hubot Sans Variable', sans-serif;
@@ -100,10 +100,10 @@
 	}
 
 	body {
-		@apply tracking-normal;
+		@apply tracking-normal font-hubot;
 		background-color: hsl(var(--background));
 		color: hsl(var(--foreground));
-		font-family: var(--font-primary);
+		/* font-family: var(--font-primary); */
 		font-weight: 300;
 	}
 
