updated font style - hubot sans

--- a/src/app.css
+++ b/src/app.css
@@ -39,7 +39,7 @@
 		url('/fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
 		url('/fonts/Hubot-Sans.woff2') format('woff2-variations');
 	font-weight: 200 900;
-	font-stretch: 75% 125%;
+	font-stretch: -100%;
 }
 
 @font-face {
