update code block typeface

--- a/src/app.css
+++ b/src/app.css
@@ -131,8 +131,8 @@
 		@apply tracking-normal;
 	}
 
-	code {
-		font-family: var(--font-power);
+	pre, code {
+		font-family: var(--font-mono) !important;
 	}
 
 	button,
