--- a/src/app.css
+++ b/src/app.css
@@ -16,6 +16,7 @@
 	src:
 		local('Menlo Regular'),
 		url('/fonts/Menlo-Regular.woff') format('woff');
+	font-display: swap;
 }
 
 @font-face {
@@ -25,6 +26,7 @@
 	src:
 		local('Sohne'),
 		url('/fonts/Soehne-Breit-Kraftig.woff2') format('woff2');
+	font-display: swap;
 }
 
 @font-face {
@@ -34,6 +36,7 @@
 	src:
 		local('ABC Favorit Variable'),
 		url('/fonts/ABCFavoritVariable-Trial.woff2') format('woff2');
+	font-display: swap;
 }
 
 @font-face {
@@ -43,6 +46,7 @@
 		url('/fonts/Hubot-Sans.woff2') format('woff2-variations');
 	font-weight: 200 900;
 	font-stretch: -100%;
+	font-display: swap;
 }
 
 @font-face {
@@ -52,6 +56,7 @@
 	src:
 		local('PowerGrotesk'),
 		url('/fonts/PowerGrotesk-Variable.woff2') format('woff2');
+	font-display: swap;
 }
 
 @font-face {
@@ -61,6 +66,7 @@
 	src:
 		local('KodeMono-Regular'),
 		url('/fonts/KodeMono-Regular.woff2') format('woff2');
+	font-display: swap;
 }
 
 @layer base {
@@ -131,7 +137,8 @@
 		@apply tracking-normal;
 	}
 
-	pre, code {
+	pre,
+	code {
 		font-family: var(--font-mono) !important;
 	}
 
@@ -147,7 +154,7 @@
 	}
 
 	.hero {
-		background: url('/hero.png');
+		background: url('/hero.webp');
 		background-repeat: no-repeat;
 		background-position: center;
 		@apply pt-16 md:pt-20 pb-20 md:pb-40;
