--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
-@import '@fontsource-variable/inter';
+/* @import '@fontsource-variable/inter'; */
 @import '@fontsource/ubuntu-mono';
-@import '@fontsource-variable/geist-mono';
+/* @import '@fontsource-variable/geist-mono'; */
 @import '@fontsource/ibm-plex-sans';
 @import '@fontsource/ibm-plex-sans/500.css';
 @import '@fontsource/ibm-plex-sans/600.css';
@@ -9,7 +9,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
 	font-family: 'Menlo Regular';
 	font-style: normal;
 	font-weight: normal;
@@ -37,7 +37,7 @@
 		local('ABC Favorit Variable'),
 		url('/fonts/ABCFavoritVariable-Trial.woff2') format('woff2');
 	font-display: swap;
-}
+} */
 
 @font-face {
 	font-family: 'Charter';
@@ -190,7 +190,7 @@
 		font-weight: 700 !important;
 	}
 
-	.default-theme {
+	/* .default-theme {
 		background-color: #19191a;
 		color: white;
 	}
@@ -213,5 +213,5 @@
 	.off-white-theme {
 		background-color: #fef5eb;
 		color: #171717;
-	}
+	} */
 }
